# FerriteEngine

./: Cargo.toml  README.md  renderdoc.cap
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/core/: camera.rs  mod.rs  utils.rs  view_frustum.rs  window.rs
crates/engine/src/core/application/: application.rs  mod.rs
crates/engine/src/core/entity/: entity.rs  entity_handle.rs  mod.rs
crates/engine/src/core/entity/component/: camera_component.rs  debug_component.rs  mod.rs  model_component.rs
crates/engine/src/core/model/: animation.rs  bone.rs  channel.rs  mod.rs  model.rs  model_mesh.rs  pose.rs  vertex.glsl
crates/engine/src/core/model/animation_graph/: animation_graph.rs  mod.rs
crates/engine/src/core/physics/: mod.rs  physics_engine.rs  rigidbody.rs
crates/engine/src/core/primitives/: mod.rs  offset.rs  position.rs  region.rs  size.rs
crates/engine/src/core/renderer/: framebuffer.rs  mod.rs
crates/engine/src/core/renderer/light/: mod.rs  skylight.rs
crates/engine/src/core/renderer/line/: line.rs
crates/engine/src/core/renderer/plane/: mod.rs  plane.rs  vertex.glsl
crates/engine/src/core/renderer/text/: mod.rs  text.rs  (+1 more)
crates/engine/src/core/scene/: mod.rs  scene.rs
crates/engine/src/player/: bone_colliders.rs  mod.rs  player.rs
crates/engine/src/terrain/: mod.rs  terrain.rs
crates/engine/src/terrain/dual_contouring/: dual_contouring.rs  fragment.glsl  mod.rs  vertex.glsl  water_fragment.glsl  water_vertex.glsl
crates/engine/src/terrain/marching_cubes/: mod.rs
crates/engine/src/terrain/voxel/: mod.rs  voxel.rs
(+209 files in other folders)
