[package]
name = "voxelengine"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
fast-surface-nets = "0.2.0"
gl = "0.14.0"
glfw = "0.58.0"
image = "0.25.2"
lazy_static = "1.5.0"
libnoise = "1.1.2"
ndarray = "0.16.1"
rand = "0.8.5"
russimp = "3.2.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }

[profile.dev]
opt-level = 3
