[package]
name = "ferrite"
version = "0.1.0"
edition = "2021"

[dependencies]
as-any = "0.3.1"
cgmath = "0.18.0"
env_logger = "0.11.5"
fast-surface-nets = "0.2.1"
gl = "0.14.0"
glfw = "0.59.0"
image = "0.25.5"
lazy_static = "1.5.0"
libnoise = "1.1.2"
log = "0.4.25"
ndarray = "0.16.1"
rand = "0.9.0"
rapier3d = { version = "0.24.0", features = ["simd-stable"] }
russimp = "3.2.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
